prog: completed basic authentication in identity-service